Update purpur.sh